✨ Feat(backend): implement route for getting user saved channels
