# apps/backend/api/http/handlers/alert/read.go
@@ -3,12 +3,14 @@ package alerts
 import (
 	"backend/api/http"
 	"backend/internal/db/repository"
+	"encoding/json"
 	"errors"
 	"fmt"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5"
+	"github.com/rs/zerolog/log"
 )
 
 // GetUserAlerts godoc
@@ -44,7 +46,7 @@ func (h *AlertHandler) GetUserAlerts(c *gin.Context, userID string) {
 // @Produce      json
 // @Success      200  {object}  http.Response{data=[]repository.Channel}  "Channels retrieved successfully"
 // @Failure      500  {object}  http.InternalServerErrorResponse          "Internal server error"
-// @Router       /alerts/channels [get]
+// @Router       /alerts/channels/all [get]
 func (h *AlertHandler) GetAllChannels(c *gin.Context) {
 	ctx := c.Request.Context()
 
@@ -54,6 +56,7 @@ func (h *AlertHandler) GetAllChannels(c *gin.Context) {
 		http.SendInternalServerError(c, err)
 		return
 	}
+	log.Info().Interface("channels", channels).Msg("channels retrieved")
 
 	http.SendSuccess(c, channels, http.WithMessage("Channels retrieved successfully"))
 }
@@ -93,4 +96,71 @@ func (h *AlertHandler) GetAlertByID(c *gin.Context, userID string) {
 	}
 
 	http.SendSuccess(c, alert, http.WithMessage("Alert retrieved successfully"))
+}
+
+// rawWebhookChannel is a temporary struct for unmarshalling webhook data from Redis
+type rawWebhookChannel struct {
+	ID          string `json:"id"`
+	WebhookURL  string `json:"webhookUrl"`
+	BearerToken string `json:"bearerToken"`
+	Enabled     bool   `json:"enabled"` // "true" or "false"
+	Status      string `json:"status"`
+}
+
+// GetUserChannels godoc
+//
+// @Summary      Retrieve notification channels for a user
+// @Description  Fetch all notification channels for a given user ID
+// @Tags         Alerts
+// @Security     ApiKeyAuth
+// @Accept       json
+// @Produce      json
+// @Param        userId   path      string  true  "User ID"
+// @Success      200  {object}  http.Response{data=UserChannelsResponse}  "User channels retrieved successfully"
+// @Failure      403  {object}  map[string]string                     "Forbidden"
+// @Failure      500  {object}  http.InternalServerErrorResponse      "Internal server error"
+// @Router       /alerts/channels [get]
+func (h *AlertHandler) GetUserChannels(c *gin.Context, userId string) {
+	ctx := c.Request.Context()
+
+	data, err := h.getUserChannels(ctx, userId)
+	if err != nil {
+		http.SendInternalServerError(c, err, http.WithMessage("failed to get user channels"))
+		return
+	}
+	response := &UserChannelsResponse{}
+
+	if email, ok := data["email"]; ok {
+		response.Email = &email
+	}
+	if telegramID, ok := data["telegram_id"]; ok {
+		response.Telegram = &telegramID
+	}
+	if webhookJSON, ok := data["webhook"]; ok {
+		var rawWebhook rawWebhookChannel
+		if err := json.Unmarshal([]byte(webhookJSON), &rawWebhook); err == nil {
+			webhoolUUID, err := uuid.Parse(rawWebhook.ID)
+			if err != nil {
+				h.logger.Error().
+					Err(err).
+					Str("userID", userId).
+					Str("rawWebhookID", rawWebhook.ID).
+					Msg("cached webhook ID is invalid (data corruption or legacy format)")
+
+				http.SendInternalServerError(c, err, http.WithMessage("failed to parse webhook ID"))
+			}
+
+			response.Webhook = &repository.WebhookConfig{
+				ID:          webhoolUUID,
+				WebhookUrl:  rawWebhook.WebhookURL,
+				BearerToken: rawWebhook.BearerToken,
+				Enabled:     &rawWebhook.Enabled,
+				Status:      rawWebhook.Status,
+			}
+		} else {
+			h.logger.Error().Err(err).Str("userID", userId).Msg("failed to unmarshal webhook channel info")
+		}
+	}
+
+	http.SendSuccess(c, response, http.WithMessage("User channels retrieved successfully"))
 }
